@@ -65,6 +65,7 @@ Application Changes:
 - Character settings can now also alter the maximum amount of nuyen that a character can carry over from Create mode into Career mode.
 - Fixed custom category spells not presenting as a treenode.
 - Standardized curly brackets notation to all uses of attributes in computable expressions. This means that all data expressions that can be computed with attribute values (e.g. damage codes, cyberware rating limits) can now also use attribute maxima and minima via `{[Abbreviation]Maximum}` and `{[Abbreviation]Minimum}` (replacing [Abbreviation] with the appropriate attribute's three-letter abbreviation), and all such fields now specifically always require attribute abbreviations and codes to be enclosed in curly brackets.
+- Autosaves are now always compressed in Fast compression mode, regardless of the program's settings around what compression to use for compressed saves. If an autosave takes longer than a minute, the next attempted autosaves will be uncompressed, and if three attempts time out in this manner, the program will no longer attempt to autosave the character.
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
